# FileManager

./: CMakeLists.txt  CThread.cpp  CThread.hpp  FileMoverDelegate.cpp  FileMoverDelegate.hpp  FileProgressDialog.cpp  FileProgressDialog.hpp  FileTabSelector.cpp  FileTabSelector.hpp  FileTableView.cpp  FileTableView.hpp  ItemContextMenu.cpp  ItemContextMenu.hpp  MainWindow.cpp  MainWindow.hpp  NewDirDialog.cpp  NewDirDialog.hpp  NewFileDialog.cpp  NewFileDialog.hpp  OrderedFileSystemModel.cpp  OrderedFileSystemModel.hpp  QuickAccessBar.cpp  QuickAccessBar.hpp  README.md  main.cpp  mainwindow.ui  progressdialog.ui
Resources/: resource.qrc
